# SimWork

./: .env.example  .gitignore  Analysis.ipynb  BACKLOG.md  Dockerfile.railway  Makefile  README.md  docker-compose.yml  jolly-sauteeing-quiche.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  __init__.py  config.py  models.py  pyproject.toml  simwork.db
backend/agent_router/: __init__.py  downsample.py  evidence.py  router.py  sandbox.py
backend/agent_tools/: tools.py
backend/api/: auth.py  main.py  routes.py
backend/api/routes/: scenarios.py  sessions.py
backend/data_layer/: db.py
backend/investigation_logger/: __init__.py  logger.py  store.py
backend/llm_interface/: client.py  llm_client.py  prompts.py  service.py
backend/scenario_loader/: __init__.py  loader.py
backend/scoring/: scorer.py
backend/simulation_engine/: __init__.py  dependencies.py  engine.py  service.py
backend/telemetry_layer/: __init__.py  service.py  telemetry.py
backend/tests/: conftest.py  test_api.py  test_logger.py  test_router.py  test_sandbox.py  test_startup.py
docs/: 1-product-overview.md  2-ui-ux-design.md  3-system-architecture.md  4-scenario-template.md  5-root-cause-library.md  6-api-spec.md  GROUND_TRUTH.md  PLAN.md  TODO.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: completion-screen.tsx  data-visualization.tsx  landing-page.tsx  workspace-screen.tsx
frontend/src/: middleware.ts  (+1 more)
scripts/: csv_to_sqlite.py
(+55 files in other folders)
