[project]
name = "simwork"
version = "0.1.0"
description = "SimWork MVP backend and API"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.49.0",
  "fastapi>=0.115.0",
  "openai>=1.68.0",
  "pandas>=2.2.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
