[project]
name = "simwork-backend"
version = "0.1.0"
description = "SimWork simulation platform backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "aiosqlite>=0.20.0",
    "google-auth>=2.0.0",
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
